assets/css/style.css
/* ... */
.navbar {
    margin-left: auto;
    margin-right: auto;
    align-self: center;
    align-items: center;
    align-content: center;
    padding: 0;
}


/* override Bootstrap defaults*/

.container-fluid {
    flex-direction: column;
}

.navbar-dark .navbar-brand,
.navbar-dark .navbar-brand:focus,
.navbar-dark .navbar-brand:hover {
    color: var(--text-color);
}

.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .show>.nav-link {
    box-shadow: 10px 10px 40px var(--complimentary-color) inset, 1px 1px 10px var(--cta-color);
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--text-color);
}

.navbar-brand {
    /* color: var(--text-color); */
    font-size: min(max(18px, 4vw), 32px);
    margin: 0;
}

.navbar-brand a {
    color: var(--link-color);
    margin: auto;
    text-align: center;
}

.navbar-toggler {
    width: 100%;
    color: var(--text-color);
}

.navbar-collapse {
    text-align: center;
    width: 100%;
}

.logo-img-filtering {
    height: 6rem;
    filter: opacity(0.5) drop-shadow(0 0 0 var(--text-color));
    margin-top: 0.7rem;
}

.nav-link {
    opacity: 0.5;
    color: var(--link-color);
    width: 100%;
    /* margin-left: auto;
    margin-right: auto; */
    font-size: min(max(16px, 6vw), 20px);
    text-transform: uppercase;
}

.nav-item {
    min-width: 150px;
    width: 100%;
    opacity: 0.8;
}

.nav-link.active {
    opacity: 1;
    -webkit-box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    -moz-box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
}

.nav-link:hover {
    opacity: 0.9;
    color: var(--link-hover-color);
    -webkit-box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    -moz-box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    border: none;
    border-radius: 4px;
    transition: 0.3s;
}

#logo-wr {
    width: 100px;
    height: 100px;
    display: block;
    flex-direction: column;
    flex-direction: column;
}

.logo-link {
    display: block;
}

#logo-wr img {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
}

#header-title {
    font-size: 2em;
    color: var(--text-color);
    display: flex;
    flex-direction: column;
}

.nav-wr {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 0;
    padding: 0;
}


/* special classes to style different elements*/

.center-content {
    text-align: center;
    margin: 30px 0 0 0;
    padding: 15px 0 10px 0;
}

.heading-alignment {
    text-align: center;
    padding: 15px 0 0 0;
}

.center-p {
    font-size: small;
    text-align: center;
    margin: 0;
    letter-spacing: 0.1rem;
}

.description-p {
    padding: 20px 20px 20px 15px;
    font-size: medium;
    text-align: justify;
    margin: 0;
    letter-spacing: 0.1rem;
}

.loading {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 2rem 0;
    width: 100%;
    height: 100%;
    background-color: transparent;
}

.fa-xmark {
    color: var(--accent-color);
}

.btp-wr {
    text-align: center;
    margin-top: 30px;
    ;
}

.backToTop {
    font-size: small;
    padding: 0.2rem 0.5rem;
    opacity: 0.9;
    text-decoration: none;
    box-shadow: 10px 10px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    color: var(--text-color);
    border-radius: 5px;
}

.backToTop:hover {
    opacity: 1;
    background-color: #552f1e;
    color: #ece7e1;
    border: 1px solid transparent;
}

.sources-links {
    text-align: center;
}

.sources-links>a {
    font-size: small;
    padding: 0.2rem 0.5rem;
}


/* ---CTA section------------------------------------------------ */

#wiki_callToAction {
    padding: 1rem;
    background-color: rgba(239, 160, 11, 0.28);
    border-radius: 4px;
    margin: 15px 0.5% 0.5% 0.5%;
}

#wiki_callToAction>h3 {
    text-align: center;
    margin-bottom: 0;
    padding-top: 0.5rem;
}

#wiki_callToAction>p {
    text-align: center;
    margin-bottom: 0;
}

figure>img {
    display: block;
    margin: 0 auto;
    padding: 10px 10px 10px 10px;
    max-width: 100%;
}

figure>figcaption {
    text-align: center;
    font-size: small;
    margin: 0;
    padding: 0;
}


/* ---ARTICLES------------------------------------------------ */

article {
    max-width: 1024px;
    margin-bottom: 20px;
    border-radius: 5px;
}

article:last-child {
    margin-bottom: 0;
}

article h2 {
    margin: 30px 0 0px 0;
    padding-top: 15px;
}

article p {
    line-height: 24px;
    padding: 0 10px 0 10px;
    text-indent: 20px;
}

.art-wr {
    background-color: var(--articles-bg-blue-color);
    border-radius: 5px;
    margin-top: 15px;
    padding-bottom: 0.8rem;
    ;
}

blockquote {
    font-size: 0.9em;
    font-style: italic;
    padding: 5px 10px 5px 20px;
}


/* ---TABs------------------------------------------------ */


/* Style the buttons that are used to open the tab content */

.sub-tabs {
    overflow: hidden;
    display: inline-flex;
    margin-left: auto;
    margin-right: auto;
    align-content: center;
    align-items: center;
    width: 100%;
}

#cities-buttons {
    float: left;
    margin-top: 30px;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
}
/* ... */

